@@ -1,6 +1,11 @@
 # ChangeLog for sci-chemistry/relax
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/relax/ChangeLog,v 1.28 2014/10/10 08:19:27 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/relax/ChangeLog,v 1.29 2014/11/17 08:54:44 jlec Exp $
+
+*relax-3.3.2 (17 Nov 2014)
+
+  17 Nov 2014; Justin Lecher <jlec@gentoo.org> +relax-3.3.2.ebuild:
+  Version Bump
 
 *relax-3.3.1 (10 Oct 2014)
 
